update toList